AUTOMAKE_OPTIONS=foreign
sbin_PROGRAMS = affsck mkaffs fsck.affs mkfs.affs
affsck_SOURCES = affsck.c buffer.c bitmap.c inode.c util.c amigaffs.h affs_config.h
mkaffs_SOURCES = mkaffs.c buffer.c bitmap.c inode.c util.c amigaffs.h affs_config.h

fsck_affs_SOURCES = affsck.c buffer.c bitmap.c inode.c util.c amigaffs.h affs_config.h
mkfs_affs_SOURCES = mkaffs.c buffer.c bitmap.c inode.c util.c amigaffs.h affs_config.h
